--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -8,6 +8,8 @@
 @import "as-graph/all";
 @import "as-tree/all";
 @import "as-dnd/all";
+@import "as-button/all";
+@import "as-complex-editor/all";
 
 @import "as-data-table";
 @import "as-data-card";
@@ -59,8 +61,6 @@
 
 @import "as-breadcrumb";
 @import "as-dialog";
-@import "as-button";
-@import "as-button-theme";
 @import "as-text-panel";
 @import "as-grid";
 @import "as-progress-bar";
