--- a/src/main/scss/apishore-apppage/as-complex-editor/_all.scss
+++ b/src/main/scss/apishore-apppage/as-complex-editor/_all.scss
@@ -1,3 +1,4 @@
 @import "as-complex-editor";
+@import "as-complex-editor-header";
 @import "as-complex-editor-selection-summary";
 @import "as-complex-editor-body";
