--- a/src/main/scss/apishore-apppage/as-complex-editor/_as-complex-editor-selection-summary.scss
+++ b/src/main/scss/apishore-apppage/as-complex-editor/_as-complex-editor-selection-summary.scss
@@ -49,9 +49,24 @@ $as-complex-editor-summary-gutter: $as-gutter * 1.5;
 }
 .as-complex-editor-selection-summary-actions
 {
+	position: relative;
+	padding-left: 20px;
 	margin-top: $as-complex-editor-summary-gutter;
 	margin-left: -$as-complex-editor-summary-gutter;
 	margin-right: -$as-complex-editor-summary-gutter;
 	margin-bottom: -$as-complex-editor-summary-gutter;
 	background-color: map-get($as-palette-grey, 200);
+	border-top: solid 1px map-get($as-palette-grey, 300);
+	&:after
+	{
+		content:"";
+		position: absolute;
+		top: -20px;
+		left: 34px;
+		width: 0px;
+		height: 0px;
+		border-color: transparent transparent map-get($as-palette-grey, 400) transparent;
+		border-width: 10px;
+		border-style: solid
+	}
 }
