main menu refactoring

--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -10,6 +10,7 @@
 @import "as-dnd/all";
 @import "as-button/all";
 @import "as-complex-editor/all";
+@import "as-menu/all";
 
 @import "as-data-table";
 @import "as-data-card";
@@ -31,7 +32,6 @@
 @import "as-view-control";
 @import "as-two-list-selection";
 @import "as-infobar";
-@import "as-main-menu";
 @import "as-login-form";
 @import "as-universal-search";
 @import "as-date-picker";
