--- a/src/main/scss/apishore-apppage/as-button/_as-button-text.scss
+++ b/src/main/scss/apishore-apppage/as-button/_as-button-text.scss
@@ -4,7 +4,8 @@
 	
 	align-items: center;
 	text-align: center;
-	line-height: $as-button-line-height;
+	padding-top: 2px;
+	line-height: $as-button-line-height - 2px;
 	background: transparent;
 	white-space: nowrap;
 	// override for FAB, icon buttons, etc.
