--- a/src/main/scss/apishore-apppage/as-button/_as-button-theme.scss
+++ b/src/main/scss/apishore-apppage/as-button/_as-button-theme.scss
@@ -128,7 +128,7 @@
     }
   }
 
-  &.as-accent {
+  &.asa-accent {
     color: map-get($as-palette-accent, 500);
     &.asa-raised,
     &.asa-fab {
