--- a/src/main/scss/apishore-apppage/_all-responsive.scss
+++ b/src/main/scss/apishore-apppage/_all-responsive.scss
@@ -1,3 +1,4 @@
+@import "layout/all";
 
 @import "bars/all";
 @import "sidebar/all";
@@ -20,8 +21,10 @@
 @import "menu/all";
 
 @import "crud/all";
-@import "md-list/all";
+@import "list/all";
 
+@import "navigation/all";
+@import "progress/all";
 
 @import "as-data-table";
 @import "as-data-card";
@@ -61,17 +64,10 @@
 @import "as-fieldset";
 @import "as-fieldset-normal";
 @import "as-fieldset-blocks";
-@import "as-dropdown-menu";
 
-@import "as-progress-circular";
-@import "as-progress-circular-theme";
-@import "as-progress-linear";
-
-@import "as-breadcrumb";
 @import "as-dialog";
 @import "as-text-panel";
 @import "as-grid";
-@import "as-progress-bar";
 @import "as-status-label";
 @import "as-md-card-indicator";
 @import "as-login-form";
