--- a/src/main/scss/apishore-apppage/_all.scss
+++ b/src/main/scss/apishore-apppage/_all.scss
@@ -1,7 +1,7 @@
+@import "layout/all";
+
 @import "as-responsive";
-@import "as-box";
 @import "number-polyfill";
-@import "as-grid-system";
 @import "as-apishore-demos";
 @import "as-text";
 @import "as-pagination";
