--- a/src/main/scss/components/tree/as-tree-light/_all.scss
+++ b/src/main/scss/components/tree/as-tree-light/_all.scss
@@ -1,5 +1,6 @@
 $as-tree-light-line-color: map-get($as-palette-grey, 500);
 $as-tree-light-line-color-hover: map-get($as-palette-primary, 500);
+$as-tree-light-line-color-cut: map-get($as-palette-orange, 500);
 $as-tree-light-line-width: 2px;
 $as-tree-light-line-pos: 15px;
 $as-tree-light-node-height: 32px;
@@ -7,7 +8,7 @@ $as-tree-light-node-width: 150px;
 $as-tree-light-node-hgutter: 80px;
 $as-tree-light-node-vgutter: 10px;
 
-@import "selection_info";
+@import "selection-info";
 
 .as-tree-light-container
 {
@@ -21,177 +22,17 @@ $as-tree-light-node-vgutter: 10px;
 	list-style: none;
 	position: relative;
 }
-.as-tree-light-node-no-drag
-{
-	display: block;
-	@extend .as-hbox;
-	width: 100%;
-	position: relative;
-}
-.as-tree-light-node
-{
-	position: relative;
-	@extend .as-hbox;
-	margin: 0px;
-	padding: 0px;
-	&.asa-root
-	{
-		>.as-tree-light-node-line-hr
-		{
-			left: $as-tree-light-node-height;
-		}
-		>.as-tree-light-node-line-hl
-		{
-			display:none;
-		}
-		>.as-tree-light-node-line-vl
-		{
-			display:none;
-		}
-	}
-	///horizontal line
-	&>.as-tree-light-node-line-hl
-	{
-		position: absolute;
-		top: $as-tree-light-line-pos;
-		left: -$as-tree-light-node-hgutter/2;
-		width: $as-tree-light-node-hgutter/2;
-		height: $as-tree-light-line-width;
-		background-color: $as-tree-light-line-color;
-	}
-	&>.as-tree-light-node-line-hr
-	{
-		position: absolute;
-		top: $as-tree-light-line-pos;
-		left: $as-tree-light-node-width;
-		width: $as-tree-light-node-hgutter/2;
-		height: $as-tree-light-line-width;
-		background-color: $as-tree-light-line-color;
-	}
-	&>.as-tree-light-node-line-vl
-	{
-		position: absolute;
-		top: 0px;
-		left: -$as-tree-light-node-hgutter/2;
-		width: $as-tree-light-line-width;
-		bottom: 0px;
-		background-color: $as-tree-light-line-color;
-	}
-	&:first-child
-	{
-		///vertical line
-		&>.as-tree-light-node-line-vl
-		{
-			top: $as-tree-light-line-pos;
-		}
-	}
-	&:last-child
-	{
-		&>.as-tree-light-node-line-vl
-		{
-			bottom: auto;
-			height: $as-tree-light-line-pos;
-		}
-	}
-	&:only-child
-	{
-		&>.as-tree-light-node-line-vl
-		{
-			display: none;
-		}
-	}
-}
 
-.as-tree-light-node-info
-{
-	@extend .as-hbox;
-}
+@import "node";
+@import "node-info";
+@import "box";
+
 .as-tree-light-node-box-input
 {
 	outline:none;
 	border: none;
 }
-.as-tree-light-node-box
-{
-	outline:none;
-	position: relative;
-	@extend .as-cell-fixed;
-	@extend .as-hbox;
-	border: solid 2px $as-tree-light-line-color;
-	line-height: $as-tree-light-node-height;
-	height: $as-tree-light-node-height;
-	border-radius: 4px;
-	margin-bottom: $as-tree-light-node-vgutter;
-	width: $as-tree-light-node-width;
-	@include user-select(none);
-	background-color: #fff;
-	cursor:default;
-	&.asa-new
-	{
-		border:none;
-		border-bottom: solid 1px map-get($as-palette-grey, 500);
-		border-radius: 0px;
-		color: map-get($as-palette-primary, 500);
-	}
-	&.asa-root
-	{
-		width: $as-tree-light-node-height;
-		border-radius: $as-tree-light-node-height;
-		.as-tree-light-node-box-title
-		{
-			text-align: center;
-			padding: 0px;
-			width: $as-tree-light-node-height;
-		}
-	}
-	&.asa-disabled
-	{
-		border-style: dashed;
-		.as-tree-light-node-box-drag
-		{
-			display:none;
-		}
-	}
-	&.asa-selected
-	{
-		box-shadow: $as-whiteframe-shadow-2dp;
-		border-color: $as-tree-light-line-color-hover;
-		background-color: $as-tree-light-line-color-hover;
-		color: #fff;
-		font-weight: bold;
-		.as-tree-light-node-box-drag
-		{
-			color: #fff;
-		}
-	}
-	&:hover
-	{
-		border-color: $as-tree-light-line-color-hover;
-	}
-	.as-tree-light-node-box-title
-	{
-		@extend .as-cell-wide;
-		width: 120px;
-		padding-left: $as-gutter / 2;
-		padding-right: $as-gutter / 2;
-		font-size: 13px;
-		line-height: $as-tree-light-node-height - 2px;
-		text-overflow: ellipsis;
-		overflow: hidden;
-	}
-	.as-tree-light-node-box-drag
-	{
-		@extend .as-cell-fixed;
-		padding: 0px;
-		color: $as-tree-light-line-color;
-		padding-top: 2px;
-		padding-right: 4px;
-		text-align:center;
-		i{
-			cursor: move;
-		}
-	}
-}
+
 .as-tree-light-node-nav
 {
 	position: relative;
