--- a/src/main/scss/components/layout/_as-grid-system.scss
+++ b/src/main/scss/components/layout/_as-grid-system.scss
@@ -1,15 +1,13 @@
-////
 ///
-/// @group grid
-///
+/// @group grid system
 
 
-///
+/// @description
 /// Container for grid layout.
 /// @example css
 /// <div class="as-grid-container">
 /// </div>
-///
+/// @access public
 .as-grid-container
 {
 	display: block;
