--- a/src/main/scss/variables/_variables-default-theme.scss
+++ b/src/main/scss/variables/_variables-default-theme.scss
@@ -1,10 +1,12 @@
+/// @group palette
+///
+///
+$as-palette-primary: $as-palette-red;
+$as-palette-primary-contrast: $as-palette-bg;
 $as-palette-bg: $as-palette-white;
 $as-palette-fg: $as-palette-black;
 $as-palette-dev: $as-palette-red;
 $as-palette-sidebar: $as-palette-blue-grey;
-
-$as-palette-primary: $as-palette-red;
-$as-palette-primary-contrast: $as-palette-bg;
 
 $as-palette-accent: $as-palette-blue;
 $as-palette-accent-contrast: $as-palette-bg;
@@ -15,6 +17,9 @@ $as-palette-warn-contrast: $as-palette-bg;
 $as-palette-error: $as-palette-red;
 $as-palette-error-contrast: $as-palette-bg;
 
+/// @group advanced
+///
+///
 $as-dialog-bg-color: map-get($as-palette-bg, darker);
 
 $brand-bg: map-get($as-palette-primary, 500);
