--- a/src/main/scss/variables/_variables-core.scss
+++ b/src/main/scss/variables/_variables-core.scss
@@ -1,7 +1,15 @@
 ///@group layout
-///
+
+///@label Gutter size
+///@editor dimension
+///@readonly
+///@help Gutter is used by many styles as base size unit. 16dp by default
 $as-gutter: 16px;
 
+///@label Max number of columns in the grid system
+///@editor number
+///@suggestion 12|12 cols
+///@help Big number will significally increase side of CSS. 16 by default.
 $as-grid-max-cols: 16 !default;
 
 $screen-sm-min: 600px;
@@ -13,47 +21,101 @@ $container-lg: 600px;
 $breadcrumb-separator: '/';
 
 ///@group icons
-///
+
+///@label Small icon size
+///@editor dimension
+$as-icon-size-medium: 18px;
+///@label Normal icon size
+///@editor dimension
 $as-icon-size: 24px;
+///@label Medium icon size
+///@editor dimension
+$as-icon-size-medium: 36px;
+///@label Big icon size
+///@editor dimension
+$as-icon-size-big: 48px;
 
 ///@group typography
-// ------------------------------
+
+///@label Default font family
+///@editor font
 $as-font-family: Roboto, 'Helvetica Neue', sans-serif !default;
+///@label Default font size
+///@editor dimension
 $as-font-size:   10px;
 
+///@label H4 font size
+///@editor rem
 $as-display-4-font-size-base: rem(11.20) !default;
+///@label H3 font size
+///@editor rem
 $as-display-3-font-size-base: rem(5.600) !default;
+///@label H2 font size
+///@editor rem
 $as-display-2-font-size-base: rem(4.500) !default;
+///@label H1 font size
+///@editor rem
 $as-display-1-font-size-base: rem(3.400) !default;
+///@label Headline font size
+///@editor rem
 $as-headline-font-size-base:  rem(2.400) !default;
+///@label Title font size
+///@editor rem
 $as-title-font-size-base:     rem(2.000) !default;
+///@label Sub head font size
+///@editor rem
 $as-subhead-font-size-base:   rem(1.600) !default;
 
+///@label Body font size
+///@editor rem
 $as-body-font-size-base:      rem(1.400) !default;
+///@label Caption font size
+///@editor rem
 $as-caption-font-size-base:   rem(1.200) !default;
 
 ///@group layout
 // ------------------------------
-
+///@label Grid base line
+///@editor dimension
 $as-baseline-grid:            8px !default;
+///@label Grid break width for the phones
+///@editor dimension
 $as-layout-breakpoint-sm:     600px !default;
+///@label Grid break width for the tablets
+///@editor dimension
 $as-layout-breakpoint-md:     960px !default;
+///@label Grid break width for the desktops
+///@editor dimension
 $as-layout-breakpoint-lg:     1200px !default;
+///@label Grid base line
+///@editor dimension
 $as-layout-gutter-width:      ($as-baseline-grid * 2) !default;
 
 ///@group components.appbar
-// App bar variables
+///@label Application bar height
+///@editor dimension
 $as-app-bar-height: 64px;
 
 ///@group components.toast
+///@label Toast height
+///@editor dimension
 $as-toast-height: $as-baseline-grid * 3 !default;
+///@label Toast margin
+///@editor dimension
 $as-toast-margin: $as-baseline-grid * 1 !default;
 
 // Whiteframes
 
 ///@group core.whiteframes
+
+///@label Umbra opacity
+///@editor opacity
 $as-shadow-key-umbra-opacity:      0.2;
+///@label Key penumbra
+///@editor opacity
 $as-shadow-key-penumbra-opacity:   0.14;
+///@label Ambient shadow
+///@editor opacity
 $as-shadow-ambient-shadow-opacity: 0.12;
 
 // NOTE(shyndman): gulp-sass seems to be failing if I split the shadow defs across
@@ -86,10 +148,21 @@ $as-whiteframe-shadow-24dp: 0px 11px 15px -7px rgba(0, 0, 0, $as-shadow-key-umbr
 ///@group core.zindexes
 ///
 /// Z-indexes
+
+///@label Tooltip z-index
+///@editor z-index
 $as-z-index-tooltip: 100 !default;
+///@label Menu bg z-index
+///@editor z-index
 $as-z-index-menu-bg: 7;
+///@label Menu parent div z-index
+///@editor z-index
 $as-z-index-menu-parent: 98;
+///@label Menu div z-index
+///@editor z-index
 $as-z-index-menu: 99;
+///@label Drop down z-index
+///@editor z-index
 $as-z-index-select: 99 !default;
 $as-z-index-dialog: 80 !default;
 $as-z-index-toast: 90 !default;
